# restplate

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  general.yml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs  mod.rs
tests/: health_check.rs
tests/server_setup/: mod.rs
