[package]
name = "template"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "template"

[lib]
path = "src/lib.rs"


[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
reqwest = "0.12"
config = "0.15"

tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]